# codex-switch

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  开发者AI开发与PR提交流程.md  项目完整链路说明.md  项目开发规范（AI协作）.md  项目文件结构说明.md
scripts/: check-release-contract.mjs  tauri.mjs
src/: App.test.tsx  App.tsx  OperationResultPanel.tsx  RelayRuntimeDialog.tsx  SessionManagementPage.test.tsx  SessionManagementPage.tsx  SkillsManagementPage.test.tsx  SkillsManagementPage.tsx  api.test.ts  api.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/skills/grok-search/: SKILL.md  SOURCE.json
src-tauri/resources/skills/grok-search/agents/: openai.yaml
src-tauri/resources/skills/grok-search/scripts/: GrokSearch.psm1  grok-search.ps1
src-tauri/resources/skills/newapi-image2-client/: SKILL.md  SOURCE.json
src-tauri/resources/skills/newapi-image2-client/agents/: openai.yaml
src-tauri/resources/skills/newapi-image2-client/references/: curl.md  node-openai.md  python-openai.md  raw-fetch.md
src-tauri/resources/skills/newapi-image2-client/scripts/: image2.ps1  smoke_image2.py
src-tauri/src/: backup.rs  codex_home.rs  codex_paths.rs  commands.rs  config_patch.rs  crypto.rs  file_ops.rs  lib.rs  main.rs  operation_log.rs  process_control.rs  profile_store.rs  redaction.rs  relay_verify.rs  runtime_store.rs  runtime_switcher.rs  session_manager.rs  session_scan.rs  session_sync.rs  skill_manager.rs  switcher.rs  update_check.rs  update_install.rs
src-tauri/tests/: skill_manager_contract.rs
(+2 files in other folders)
