[package]
name = "codex-switch"
version = "0.1.1"
edition = "2021"

[lib]
name = "codex_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
toml_edit = "0.23"
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
walkdir = "2"
windows-sys = { version = "0.61", features = ["Win32_Security_Cryptography", "Win32_System_Memory"] }

[dev-dependencies]
tempfile = "3"
