[package]
name = "codex-switch"
version = "0.1.7"
edition = "2021"

[lib]
name = "codex_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
toml_edit = "0.23"
rusqlite = { version = "0.37", features = ["backup", "bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
walkdir = "2"
base64 = "0.22"
url = "2"
semver = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_Storage_FileSystem", "Win32_System_Memory", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = "symbols"
